<resources>
    <!-- Misc in app strings -->
    <string name="alarm_time">Alarm Time</string>
    <string name="app_name">Dawn</string>
    <string name="calendar_icon_description">Calendar Icon</string>
    <string name="close">Close</string>
    <string name="confirmation_message">Are you sure you want to set the alarm for %1$s?</string>
    <string name="current_ringtone">Current Ringtone: %1$s</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="day_of_week_title">First day of the week</string>
    <string name="day_friday">F</string>
    <string name="day_monday">M</string>
    <string name="day_saturday">Sa</string>
    <string name="day_sunday">Su</string>
    <string name="day_thursday">Th</string>
    <string name="day_tuesday">Tu</string>
    <string name="day_wednesday">W</string>
    <string name="finished_using_phone">Ready</string>
    <string name="get_up_delay_label">Use your phone for</string>
    <string name="in_app_complete">COMPLETE</string>
    <string name="left_arrow_description">Left Arrow</string>
    <string name="minutes">mins</string>
    <string name="month_title_text">%1$s %2$d</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="right_arrow_description">Right Arrow</string>
    <string name="ringtone_volume_slider_description">Ringtone volume slider</string>
    <string name="ringtone_volume">Ringtone Volume</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_summary">Report technical issues or suggest new features</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="settings">Settings</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_duration_title">Snooze length</string>
    <string name="stay_in_app_text">Stay in this app until the time is up to keep your streak!</string>
    <string name="stay_off_time_label">Stay off phone for</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="streaks">Streaks</string>
    <string name="switch_ringtone">The current ringtone can\'t be played, please switch it above.</string>
    <string name="time_not_up_text">You can still use your phone for the amount of time above, click below if you are ready to get off your phone before the time expires!</string>
    <string name="timer_text">%1$d:%2$s</string>
    <string name="yes">Yes</string>
    <string name="zero">0</string>

    <!-- Entries listed when invoking the dark mode preference -->
    <string-array name="dark_mode_entries">
        <item>System Default</item>
        <item>On</item>
        <item>Off</item>
    </string-array>

    <!-- Values retrieved when selecting the matching dark_mode_entries above -->
    <string-array name="dark_mode_values" translatable="false">
        <item>DEFAULT</item>
        <item>ON</item>
        <item>OFF</item>
    </string-array>

    <!-- Entries listed when invoking the snooze duration preference -->
    <string-array name="snooze_duration_entries">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
        <item>11 minutes</item>
        <item>12 minutes</item>
        <item>13 minutes</item>
        <item>14 minutes</item>
        <item>15 minutes</item>
        <item>16 minutes</item>
        <item>17 minutes</item>
        <item>18 minutes</item>
        <item>19 minutes</item>
        <item>20 minutes</item>
        <item>21 minutes</item>
        <item>22 minutes</item>
        <item>23 minutes</item>
        <item>24 minutes</item>
        <item>25 minutes</item>
        <item>26 minutes</item>
        <item>27 minutes</item>
        <item>28 minutes</item>
        <item>29 minutes</item>
        <item>30 minutes</item>
    </string-array>

    <!-- Values retrieved when selecting the matching snooze_duration_entries above -->
    <string-array name="snooze_duration_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <!-- Entries listed when invoking the first day of week preference -->
    <string-array name="day_of_week_entries">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Saturday</item>
    </string-array>

    <!-- Values retrieved when selecting the matching day_of_week_entries above -->
    <string-array name="day_of_week_values" translatable="false">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>SATURDAY</item>
    </string-array>
</resources>
