<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="alarms_category"
        app:title="Alarms">

        <ListPreference
            android:defaultValue="false"
            app:defaultValue="10"
            app:dialogTitle="@string/snooze_duration_title"
            app:entries="@array/snooze_duration_entries"
            app:entryValues="@array/snooze_duration_values"
            app:key="me.colinmarsch.dawn.SNOOZE_DURATION_KEY"
            app:title="@string/snooze_duration_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="Help">

        <Preference
            app:key="me.colinmarsch.dawn.FEEDBACK_KEY"
            app:summary="@string/send_feedback_summary"
            app:title="@string/send_feedback">
            <!-- TODO(colinmarsch) replace this with a link to a feedback form -->
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.google.com" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
